--- a/laxyam/padyam/vIra-kathAH/madhurA-vijayam/raw/canto_6.xhtml
+++ b/laxyam/padyam/vIra-kathAH/madhurA-vijayam/raw/canto_6.xhtml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"
-	xmlns:epub="http://www.idpf.org/2007/ops">
+xmlns:epub="http://www.idpf.org/2007/ops">
 <head>
    <title>Madhurā Vijayam</title>
    <link rel="stylesheet" type="text/css" href="css/mv.css" />
@@ -9,158 +9,158 @@
 <div class="page">
 
 <div id="c6_p1" class="poem1">
-	<p class="devpoem">	
-		अथ वरतनुभिः समं कदाचि-<br />
-		द्विरचयितुं कुसुमापचायलीलाम् ।<br />
-		प्रमदवनममर्त्यकामिनीभि-<br />
-		र्हरिरिव नन्दनमासदन्नरेन्द्रः ॥ १ ॥ पुष्पिताग्रा	
-	</p>
-	<p class="enpoem">
-		One day thereafter<br />
-		the King set out to the pleasure grove<br />
-		to pass the time in picking flowers<br />
-		with his graceful queens –<br />
-		just as the noble Indra sets out for his garden Nandana<br />
-		with heaven’s beauties.		
-		<span class="ncol">1</span>		
-	</p>
+<p class="devpoem">
+अथ वरतनुभिः समं कदाचि-<br />
+द्विरचयितुं कुसुमापचायलीलाम् ।<br />
+प्रमदवनममर्त्यकामिनीभि-<br />
+र्हरिरिव नन्दनमासदन्नरेन्द्रः ॥ १ ॥ पुष्पिताग्रा
+</p>
+<p class="enpoem">
+One day thereafter<br />
+the King set out to the pleasure grove<br />
+to pass the time in picking flowers<br />
+with his graceful queens –<br />
+just as the noble Indra sets out for his garden Nandana<br />
+with heaven’s beauties.
+<span class="ncol">1</span>
+</p>
 </div>
 
 <div id="c6_p2" class="poem1">
-	<p class="devpoem">	
-		मुखरितमणिमेखलाकलापाः<br />
-		प्रचलितमन्वचलंस्तमायताक्ष्यः ।<br />
-		उपवनलतिका इवोपगीत-<br />
-		भ्रमरकुला मलयाद्रिगन्धवाहम् ॥ २ ॥	
-	</p>
-	<p class="enpoem">
-		As he strode ahead,<br />
-		the oval-eyed ladies,<br />
-		jingling with jewel-girt girdles,<br />
-		trailed in his wake –<br />
-		just as garden creepers,<br /> 
-		humming with bees,<br />
-		trail the Malaya breeze.		
-		<span class="ncol">2</span>		
-	</p>
+<p class="devpoem">
+मुखरितमणिमेखलाकलापाः<br />
+प्रचलितमन्वचलंस्तमायताक्ष्यः ।<br />
+उपवनलतिका इवोपगीत-<br />
+भ्रमरकुला मलयाद्रिगन्धवाहम् ॥ २ ॥
+</p>
+<p class="enpoem">
+As he strode ahead,<br />
+the oval-eyed ladies,<br />
+jingling with jewel-girt girdles,<br />
+trailed in his wake –<br />
+just as garden creepers,<br /> 
+humming with bees,<br />
+trail the Malaya breeze.
+<span class="ncol">2</span>
+</p>
 </div>
 
 <div id="c6_p3" class="poem1">
-	<p class="devpoem">	
-		अजनयदवनीश्वरस्य चेत-<br />
-		स्यसितदृशां मणिनूपुरप्रणादः ।<br />
-		सहपरिचलितप्रसूनकेतो-<br />
-		रवनमदैक्षवचापघोषशङ्काम् ॥ ३ ॥	
-	</p>
-	<p class="enpoem">
-		The King mistook<br />
-		the peal of the ornamented anklets<br />
-		worn by the dark-eyed girls<br />
-		for the sound of the sugarcane bow<br />
-		as if Kāma,<br />
-		moving among them,<br />
-		were readying his aim.
-		<span class="ncol">3</span>		
-	</p>
+<p class="devpoem">
+अजनयदवनीश्वरस्य चेत-<br />
+स्यसितदृशां मणिनूपुरप्रणादः ।<br />
+सहपरिचलितप्रसूनकेतो-<br />
+रवनमदैक्षवचापघोषशङ्काम् ॥ ३ ॥
+</p>
+<p class="enpoem">
+The King mistook<br />
+the peal of the ornamented anklets<br />
+worn by the dark-eyed girls<br />
+for the sound of the sugarcane bow<br />
+as if Kāma,<br />
+moving among them,<br />
+were readying his aim.
+<span class="ncol">3</span>
+</p>
 </div>
 
 <div id="c6_p4" class="poem1">
-	<p class="devpoem">	
-		अवनिपतिमनु प्रतस्थुषीणां<br />
-		हरिणदृशामितरेतरप्रसक्ताः ।<br />
-		मधुरसमधुरा गिरस्तदानीं<br />
-		बहुविधभङ्गितरङ्गिता बभूवुः ॥ ४ ॥	
-	</p>
-	<p>
-		<audio controls="controls">
-		  <source src="audio/6_4.m4a" type="audio/mpeg" />
-		  Your browser does not support the audio tag.
-		</audio> 
-	</p>	
-	<p class="enpoem">
-		As they followed their lord,<br />
-		the doe-eyed women,<br />
-		voices sweet as seeping honey,<br />
-		chattered each to her neighbour,<br />
-		their many-wayed words like waves.	
-		<span class="ncol">4</span>		
-	</p>
+<p class="devpoem">
+अवनिपतिमनु प्रतस्थुषीणां<br />
+हरिणदृशामितरेतरप्रसक्ताः ।<br />
+मधुरसमधुरा गिरस्तदानीं<br />
+बहुविधभङ्गितरङ्गिता बभूवुः ॥ ४ ॥
+</p>
+<p>
+<audio controls="controls">
+  <source src="audio/6_4.m4a" type="audio/mpeg" />
+  Your browser does not support the audio tag.
+</audio> 
+</p>
+<p class="enpoem">
+As they followed their lord,<br />
+the doe-eyed women,<br />
+voices sweet as seeping honey,<br />
+chattered each to her neighbour,<br />
+their many-wayed words like waves.
+<span class="ncol">4</span>
+</p>
 </div>
 
 <div id="c6_p5" class="poem1">
-	<p class="devpoem">	
-		वरतनु परतः प्रयाहि मन्दं<br />
-		हरिणदृशां पुरतः प्रयायिनीनाम् ।<br />
-		पथि गतिरयशीर्णहारमुक्ता-<br />
-		मणिगणशर्करिले पदं न कुर्याः ॥ ५ ॥	
-	</p>
-	<p class="enpoem">
-		‘Step to the side there –<br />
-		slowly now, my love!<br />
-		Mind you don’t tread here –<br />
-		the plenteous pearl necklaces coming loose<br />
-		as the doe-eyed women ahead pick up pace<br />
-		are making a gravel of the place.’		
-		<span class="ncol">5</span>		
-	</p>
+<p class="devpoem">
+वरतनु परतः प्रयाहि मन्दं<br />
+हरिणदृशां पुरतः प्रयायिनीनाम् ।<br />
+पथि गतिरयशीर्णहारमुक्ता-<br />
+मणिगणशर्करिले पदं न कुर्याः ॥ ५ ॥
+</p>
+<p class="enpoem">
+‘Step to the side there –<br />
+slowly now, my love!<br />
+Mind you don’t tread here –<br />
+the plenteous pearl necklaces coming loose<br />
+as the doe-eyed women ahead pick up pace<br />
+are making a gravel of the place.’
+<span class="ncol">5</span>
+</p>
 </div>
 
 <div id="c6_p6" class="poem1">
-	<p class="devpoem">	
-		नलिनमुखि न बोधय प्रसुप्ता-<br />
-		निह मणिनूपुरशिञ्जितेन हंसान् ।<br />
-		द्रुतगमनविघातमाचरेयु-<br />
-		र्नियतममी तव पादपद्मलग्नाः ॥ ६ ॥	
-	</p>
-	<p class="enpoem">
-		‘Look out, lady of the lotus face!<br />
-		Don’t awaken the <span class="it"><span class="gls"><a epub:type="noteref" href="glossary.xhtml#gls15">haṃsas</a></span></span><br />
-		fast asleep here<br />
-		with the ringing of your jewelled anklets.<br />
-		They’d be sure to cling to your feet,<br />
-		which look so like lotuses,<br />
-		and stop you from hurrying ahead.’<span class="ref"><sup><a epub:type="noteref" href="#c6_en1">1</a></sup></span>		
-		<span class="ncol">6</span>		
-	</p>
+<p class="devpoem">
+नलिनमुखि न बोधय प्रसुप्ता-<br />
+निह मणिनूपुरशिञ्जितेन हंसान् ।<br />
+द्रुतगमनविघातमाचरेयु-<br />
+र्नियतममी तव पादपद्मलग्नाः ॥ ६ ॥
+</p>
+<p class="enpoem">
+‘Look out, lady of the lotus face!<br />
+Don’t awaken the *haṃsas*<br />
+fast asleep here<br />
+with the ringing of your jewelled anklets.<br />
+They’d be sure to cling to your feet,<br />
+which look so like lotuses,<br />
+and stop you from hurrying ahead.’<span class="ref"><sup><a epub:type="noteref" href="#c6_en1">1</a></sup></span>
+<span class="ncol">6</span>
+</p>
 </div>
 
 <div id="c6_p7" class="poem1">
-	<p class="devpoem">	
-		करनखरमरीचिमञ्जरीभि-<br />
-		र्हतहृदयो जलशङ्क‍या कुरङ्गः ।<br />
-		अनुपतति विलोकयैकवारं<br />
-		सखि नियतं स निवर्तते विलक्षः ॥ ७ ॥	
-	</p>
-	<p class="enpoem">
-		‘An antelope is following you,<br />
-		hopelessly hypnotised<br />
-		by the shimmering sheen of your fingernails,<br />
-		which he takes to be water.<br />
-		Oh do have a look, dear!<br />
-		He has scampered off,<br />
-		evidently embarrassed.’		
-		<span class="ncol">7</span>		
-	</p>
+<p class="devpoem">
+करनखरमरीचिमञ्जरीभि-<br />
+र्हतहृदयो जलशङ्क‍या कुरङ्गः ।<br />
+अनुपतति विलोकयैकवारं<br />
+सखि नियतं स निवर्तते विलक्षः ॥ ७ ॥
+</p>
+<p class="enpoem">
+‘An antelope is following you,<br />
+hopelessly hypnotised<br />
+by the shimmering sheen of your fingernails,<br />
+which he takes to be water.<br />
+Oh do have a look, dear!<br />
+He has scampered off,<br />
+evidently embarrassed.’
+<span class="ncol">7</span>
+</p>
 </div>
 
 <div id="c6_p8" class="poem1">
-	<p class="devpoem">	
-		शशिमुखि शशिकान्तकुट्टिमेषु<br />
-		स्खलनभिया न पदात् पदं प्रयासि ।<br />
-		इयमिह वदनानुबिम्बराजि-<br />
-		स्तव न पुनर्नवपङ्कजोपाहरः ॥ ८ ॥	
-	</p>
-	<p class="enpoem">
-		‘Is it for fear of slipping<br />
-		on the moonstone-paved path,<br />
-		my moon-faced girl,<br />
-		that you falter over footstep after footstep?<span class="ref"><sup><a epub:type="noteref" href="#c6_en2">2</a></sup></span><br />
-		And this is the reflection<br />
-		repeated over and over<br />
-		of your own face;<br />
-		not a fresh offering of blown lotus flowers.’		
-		<span class="ncol">8</span>		
-	</p>
+<p class="devpoem">
+शशिमुखि शशिकान्तकुट्टिमेषु<br />
+स्खलनभिया न पदात् पदं प्रयासि ।<br />
+इयमिह वदनानुबिम्बराजि-<br />
+स्तव न पुनर्नवपङ्कजोपाहरः ॥ ८ ॥
+</p>
+<p class="enpoem">
+‘Is it for fear of slipping<br />
+on the moonstone-paved path,<br />
+my moon-faced girl,<br />
+that you falter over footstep after footstep?<span class="ref"><sup><a epub:type="noteref" href="#c6_en2">2</a></sup></span><br />
+And this is the reflection<br />
+repeated over and over<br />
+of your own face;<br />
+not a fresh offering of blown lotus flowers.’
+<span class="ncol">8</span>
+</p>
 </div>
 
 <p class="it">
@@ -169,138 +169,136 @@ Kampa playing games with his wives in a lake.
 </p>
 
 <div id="c6_p9" class="poem1">
-	<p class="devpoem">	
-		अवनिपतिरसिक्त दीर्घिकायां<br />
-		मुखकमलं सलिलेन साभिलाषम् ।<br />
-		किमपि समधिकार्द्रपक्ष्मलेखं<br />
-		वदनमभूदरुणेक्षणं परस्याः ॥ ९ ॥
-	</p>
-	<p class="enpoem">
-		The King,<br />
-		lusting after one girl,<br />
-		splashed her lotus face with water.<br />
-		But it was another whose<br />
-		eyelashes ran wet<br />
-		and eyes turned red.
-		<span class="ncol">9</span>		
-	</p>
+<p class="devpoem">
+अवनिपतिरसिक्त दीर्घिकायां<br />
+मुखकमलं सलिलेन साभिलाषम् ।<br />
+किमपि समधिकार्द्रपक्ष्मलेखं<br />
+वदनमभूदरुणेक्षणं परस्याः ॥ ९ ॥
+</p>
+<p class="enpoem">
+The King,<br />
+lusting after one girl,<br />
+splashed her lotus face with water.<br />
+But it was another whose<br />
+eyelashes ran wet<br />
+and eyes turned red.
+<span class="ncol">9</span>
+</p>
 </div>
 
 <div id="c6_p10" class="poem1">
-	<p class="devpoem">	
-		सलिलहतिभियापवृत्तगात्र्याः<br />
-		प्रचलितवेण्यपराङ्गकं परस्याः ।<br />
-		धरणिपतिरमंस्त मीनकेतोः<br />
-		फलकमुपाहितखड्गवल्लरीकम् ॥१० ॥	
-	</p>
-	<p class="enpoem">
-		As another girl turned away,<br />
-		fearing a slap of water,<br />
-		the King believed the braid whipping across her back<br />
-		was the fish-bannered Kāma’s sword<br />
-		swinging across his shield.
-		<span class="ncol">10</span>
-	</p>
+<p class="devpoem">
+सलिलहतिभियापवृत्तगात्र्याः<br />
+प्रचलितवेण्यपराङ्गकं परस्याः ।<br />
+धरणिपतिरमंस्त मीनकेतोः<br />
+फलकमुपाहितखड्गवल्लरीकम् ॥१० ॥
+</p>
+<p class="enpoem">
+As another girl turned away,<br />
+fearing a slap of water,<br />
+the King believed the braid whipping across her back<br />
+was the fish-bannered Kāma’s sword<br />
+swinging across his shield.
+<span class="ncol">10</span>
+</p>
 </div>
 
 <div id="c6_p11" class="poem1">
-	<p class="devpoem">	
-		विशदमधरमक्ष्यनञ्जनाभं<br />
-		विगतललाम वितन्वती ललाटम् ।<br />
-		रतिरिव जलकेलिरङ्गनाना-<br />
-		मवनिपतेः स्पृहणियतामयासीत् ॥ ११ ॥	
-	</p>
-	<p class="enpoem">
-		Wiping the paint from his wives’ lips,<br />
-		the alluring collyrium from their eyes<br />
-		and the decorative dot forthwith from their foreheads –<br />
-		just as lovemaking does –<br />
-		these watersports enthralled the King.
-		<span class="ncol">11</span>
-	</p>
+<p class="devpoem">
+विशदमधरमक्ष्यनञ्जनाभं<br />
+विगतललाम वितन्वती ललाटम् ।<br />
+रतिरिव जलकेलिरङ्गनाना-<br />
+मवनिपतेः स्पृहणियतामयासीत् ॥ ११ ॥
+</p>
+<p class="enpoem">
+Wiping the paint from his wives’ lips,<br />
+the alluring collyrium from their eyes<br />
+and the decorative dot forthwith from their foreheads –<br />
+just as lovemaking does –<br />
+these watersports enthralled the King.
+<span class="ncol">11</span>
+</p>
 </div>
 
 <div id="c6_p12" class="poem1">
-	<p class="devpoem">	
-		अपि दयिततमेन वारिताभि-<br />
-		र्गृहसरसो विजहे न वारि ताभिः ।<br />
-		परिलुलितललामचर्चिकाभि-<br />
-		र्विहृतिरसान्महिलामचर्चिकाभिः ॥ १२ ॥	
-	</p>
-	<p>
-		<audio controls="controls">
-		  <source src="audio/6_12.m4a" type="audio/mpeg" />
-		  Your browser does not support the audio tag.
-		</audio> 
-	</p>	
-	<p class="enpoem">
-		Though many a time did their beloved ask,<br />
-		they left not their much-loved bask,<br />
-		their <span class="it"><span class="gls"><a epub:type="noteref" href="glossary.xhtml#gls46">tilaka</a></span></span> and sandal paste in every way faded,<br />
-		those beautiful wives of his in no way jaded.
-		<span class="ncol">12</span>
-	</p>
+<p class="devpoem">
+अपि दयिततमेन वारिताभि-<br />
+र्गृहसरसो विजहे न वारि ताभिः ।<br />
+परिलुलितललामचर्चिकाभि-<br />
+र्विहृतिरसान्महिलामचर्चिकाभिः ॥ १२ ॥
+</p>
+<p>
+<audio controls="controls">
+  <source src="audio/6_12.m4a" type="audio/mpeg" />
+  Your browser does not support the audio tag.
+</audio> 
+</p>
+<p class="enpoem">
+Though many a time did their beloved ask,<br />
+they left not their much-loved bask,<br />
+their *tilaka* and sandal paste in every way faded,<br />
+those beautiful wives of his in no way jaded.
+<span class="ncol">12</span>
+</p>
 </div>
 
 <div id="c6_p13" class="poem1">
-	<p class="devpoem">
-		अथ विहरणखेदमन्थराभिः<br />
-		सह निरगात्सरसो नृपः प्रियाभिः ।<br />
-		कलशजलनिधेरिवाप्सरोभि-<br />
-		र्विबुधतरुर्मथनश्रमालसाभिः ॥ १३ ॥
-	</p>
-	<p class="enpoem">
-		At length from the water the Lord with his lovers emerged<br />
-		after their energetic play exhausted,<br />
-		just as<br />
-		from the milk sea the divine tree with the <span class="it">apsarases</span> surfaced<br />
-		after such frenetic churning fatigued.
-		<span class="ncol">13</span>		
-	</p>
+<p class="devpoem">
+अथ विहरणखेदमन्थराभिः<br />
+सह निरगात्सरसो नृपः प्रियाभिः ।<br />
+कलशजलनिधेरिवाप्सरोभि-<br />
+र्विबुधतरुर्मथनश्रमालसाभिः ॥ १३ ॥
+</p>
+<p class="enpoem">
+At length from the water the Lord with his lovers emerged<br />
+after their energetic play exhausted,<br />
+just as<br />
+from the milk sea the divine tree with the *apsarases* surfaced<br />
+after such frenetic churning fatigued.
+<span class="ncol">13</span>
+</p>
 </div>
 
 <div id="c6_p14" class="poem1">
-	<p class="devpoem">	
-		चिकुरनियमनेषु कामिनीना-<br />
-		मभिनववस्त्रपरिग्रहान्तरेषु ।<br />
-		अभिमतपददर्शनैरयत्नै-<br />
-		रतिमदनं स्वममंस्त कम्पराजः ॥ १४ ॥	
-	</p>
-	<p class="enpoem">
-		As his voluptuous wives tied their hair<br />
-		and changed into fresh clothes,<br />
-		King Kampa considered himself luckier than Kāma<br />
-		to be granted a glimpse<br />
-		of those spots he longed to see,<br />
-		without lifting a finger.
-		<span class="ncol">14</span>		
-	</p>
+<p class="devpoem">
+चिकुरनियमनेषु कामिनीना-<br />
+मभिनववस्त्रपरिग्रहान्तरेषु ।<br />
+अभिमतपददर्शनैरयत्नै-<br />
+रतिमदनं स्वममंस्त कम्पराजः ॥ १४ ॥
+</p>
+<p class="enpoem">
+As his voluptuous wives tied their hair<br />
+and changed into fresh clothes,<br />
+King Kampa considered himself luckier than Kāma<br />
+to be granted a glimpse<br />
+of those spots he longed to see,<br />
+without lifting a finger.
+<span class="ncol">14</span>
+</p>
 </div>
 
 <div id="c6_p15" class="poem1">
-	<p class="devpoem">
-		ततः सैरन्ध्रीभिः कृतसमुचिताकल्परचनः<br />
-		पुरन्ध्रीभिः सार्धं समधिगतशुद्धान्तवसतिः ।<br />
-		त्रयीगीतं तेजस्त्रिपुरहरमाराध्य विधिव-<br />
-		द्यथार्हैर्व्यापारैर्नरपतिरहःशेषमनयत् ॥ १५ ॥ शिखरिणी	
-	</p>
-	<p class="enpoem">
-		Then the King, suitably attired by the dress-maidens,<br />
-		entered the inner quarters with the eldest matrons.<br />
-		There he worshipped,<br />
-		in accordance with <span class="it">śāstra</span>,<br />
-		the divine light to whom the triple <span class="it">Vedas</span> pay tribute,<br />
-		tormentor of Tripura<span class="ref"><sup><a epub:type="noteref" href="#c6_en3">3</a></sup></span>,<br />
-		and spent the rest of the day in fitting occupations.
-		<span class="ncol">15</span>		
-	</p>
+<p class="devpoem">
+ततः सैरन्ध्रीभिः कृतसमुचिताकल्परचनः<br />
+पुरन्ध्रीभिः सार्धं समधिगतशुद्धान्तवसतिः ।<br />
+त्रयीगीतं तेजस्त्रिपुरहरमाराध्य विधिव-<br />
+द्यथार्हैर्व्यापारैर्नरपतिरहःशेषमनयत् ॥ १५ ॥ शिखरिणी
+</p>
+<p class="enpoem">
+Then the King, suitably attired by the dress-maidens,<br />
+entered the inner quarters with the eldest matrons.<br />
+There he worshipped,<br />
+in accordance with *śāstra*,<br />
+the divine light to whom the triple *Vedas* pay tribute,<br />
+tormentor of Tripura<span class="ref"><sup><a epub:type="noteref" href="#c6_en3">3</a></sup></span>,<br />
+and spent the rest of the day in fitting occupations.
+<span class="ncol">15</span>
+</p>
 </div>
 
-	[^1]: <span class="it">Haṃsas</span> are attracted to the sound of anklets as well as being fond of lotuses.
-	[^2]: Moonstones ooze water upon seeing the moon.
-	<aside epub:type="footnote" id="c6_en3">
-		<p>Śiva</p>
-	</aside>
+[^1]: *Haṃsas* are attracted to the sound of anklets as well as being fond of lotuses.
+[^2]: Moonstones ooze water upon seeing the moon.
+[^3]: Śiva
 
 </div>
 </body>
