--- a/laxyam/padyam/vIra-kathAH/madhurA-vijayam/raw/canto_3.xhtml
+++ b/laxyam/padyam/vIra-kathAH/madhurA-vijayam/raw/canto_3.xhtml
@@ -1,329 +1,325 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"
-	xmlns:epub="http://www.idpf.org/2007/ops">
+xmlns:epub="http://www.idpf.org/2007/ops">
 <head>
    <title>Madhurā Vijayam</title>
    <link rel="stylesheet" type="text/css" href="css/mv.css" />
 </head>
 <body>
 <div class="page">
-	
+
 <div id="c3_p1" class="poem1">
-	<p class="devpoem">
-		ततो यथावत्कृतचौलसंस्क्रियो<br />
-		नरेन्द्रसूनुः स्वत एव लब्धवान् ।<br />
-		कलासु शश्वत् सकलासु कौशलं<br />
-		गुरूपदेशस्त्वपदेशतामगात् ॥ १ ॥ वंशस्थम्		
-	</p>
-	<p class="enpoem">
-		In due course,<br />
-		once he had undergone<br />
-		the <span class="it"><span class="gls"><a epub:type="noteref" href="glossary.xhtml#gls11">caula</a></span></span> ceremony<br />
-		as he ought,<br />
-		His Majesty Kampa fast mastered all major disciplines –<br />
-		schooled by a <span class="it">guru</span>,<br />
-		though he had no need for schooling.		
-		<span class="ncol">1</span>
-	</p>
+<p class="devpoem">
+ततो यथावत्कृतचौलसंस्क्रियो<br />
+नरेन्द्रसूनुः स्वत एव लब्धवान् ।<br />
+कलासु शश्वत् सकलासु कौशलं<br />
+गुरूपदेशस्त्वपदेशतामगात् ॥ १ ॥ वंशस्थम्
+</p>
+<p class="enpoem">
+In due course,<br />
+once he had undergone<br />
+the *caula* ceremony<br />
+as he ought,<br />
+His Majesty Kampa fast mastered all major disciplines –<br />
+schooled by a *guru*,<br />
+though he had no need for schooling.
+<span class="ncol">1</span>
+</p>
 </div>
 
 <div id="c3_p2" class="poem1">
-	<p class="devpoem">
-		स पञ्चबाणद्विपकेलिदीर्घिकां<br />
-		धरानुरागद्रुमपुष्पमञ्जरीम् ।<br />
-		नितम्बिनीनेत्रचकोरचन्द्रिका-<br />
-		मवापदास्कन्दितशैशवां दशाम् ॥ २ ॥		
-	</p>
-	<p class="enpoem">
-		Youth suddenly succeeded childhood.<br />
-		And his youth was<br />
-		the lake where Kāma, as elephant, wallows;<br />
-		the blossom upon the tree<br />
-		that was the nation’s adoration;<br />
-		the moonlight cherished by the <span class="it"><span class="gls"><a epub:type="noteref" href="glossary.xhtml#gls5">cakora</a></span></span>-like eyes<br />
-		of heavy-hipped ladies.		
-		<span class="ncol">2</span>
-	</p>
+<p class="devpoem">
+स पञ्चबाणद्विपकेलिदीर्घिकां<br />
+धरानुरागद्रुमपुष्पमञ्जरीम् ।<br />
+नितम्बिनीनेत्रचकोरचन्द्रिका-<br />
+मवापदास्कन्दितशैशवां दशाम् ॥ २ ॥
+</p>
+<p class="enpoem">
+Youth suddenly succeeded childhood.<br />
+And his youth was<br />
+the lake where Kāma, as elephant, wallows;<br />
+the blossom upon the tree<br />
+that was the nation’s adoration;<br />
+the moonlight cherished by the *cakora*-like eyes<br />
+of heavy-hipped ladies.
+<span class="ncol">2</span>
+</p>
 </div>
 
 <div id="c3_p3" class="poem1">
-	<p class="devpoem">
-		स रूपगर्वेण निरास्थदङ्घ्रिणा<br />
-		स्मरस्य नूनं जयवैजयन्तिकाम् ।<br />
-		न चेत् कथं तस्य तलेऽतिकोमले<br />
-		सुलेखमालक्ष्यत मीनलाञ्छनम् ॥ ३ ॥		
-	</p>
-	<p class="enpoem">
-		Glorying in his beauty,<br />
-		he must have trampled<br />
-		upon Kāma’s triumphal banner.<br />
-		Why else did the perfectly formed lines<br />
-		upon his soles so soft<br />
-		assume the shape of a fish?<span class="ref"><sup><a epub:type="noteref" href="#c3_en1">1</a></sup></span>		
-		<span class="ncol">3</span>
-	</p>
+<p class="devpoem">
+स रूपगर्वेण निरास्थदङ्घ्रिणा<br />
+स्मरस्य नूनं जयवैजयन्तिकाम् ।<br />
+न चेत् कथं तस्य तलेऽतिकोमले<br />
+सुलेखमालक्ष्यत मीनलाञ्छनम् ॥ ३ ॥
+</p>
+<p class="enpoem">
+Glorying in his beauty,<br />
+he must have trampled<br />
+upon Kāma’s triumphal banner.<br />
+Why else did the perfectly formed lines<br />
+upon his soles so soft<br />
+assume the shape of a fish?<span class="ref"><sup><a epub:type="noteref" href="#c3_en1">1</a></sup></span>
+<span class="ncol">3</span>
+</p>
 </div>
 
 <div id="c3_p4" class="poem1">
-	<p class="devpoem">
-		अधारयद्दर्शितदेहसौष्ठवां<br />
-		स राजसूनुस्तनुवृत्तमध्यताम् ।<br />
-		पराक्रमत्रासितचित्तवृत्तिभि-<br />
-		र्मृगाधिराजैरुपदीकृतामिव ॥ ४ ॥		
-	</p>
-	<p class="enpoem">
-		The slender circumference of his waist –<br />
-		setting off his stately physique –<br />
-		seemed to be a peace offering<br />
-		made by lions,<br />
-		kings of the jungle,<br />
-		their hearts trembling at the thought of his might.		
-		<span class="ncol">4</span>
-	</p>
+<p class="devpoem">
+अधारयद्दर्शितदेहसौष्ठवां<br />
+स राजसूनुस्तनुवृत्तमध्यताम् ।<br />
+पराक्रमत्रासितचित्तवृत्तिभि-<br />
+र्मृगाधिराजैरुपदीकृतामिव ॥ ४ ॥
+</p>
+<p class="enpoem">
+The slender circumference of his waist –<br />
+setting off his stately physique –<br />
+seemed to be a peace offering<br />
+made by lions,<br />
+kings of the jungle,<br />
+their hearts trembling at the thought of his might.
+<span class="ncol">4</span>
+</p>
 </div>
 
 <div id="c3_p5" class="poem1">
-	<p class="devpoem">
-		विहाय मध्यं यदि लक्ष्मरेखया<br />
-		बहिः प्रसार्येत सुधांशुमण्डलम् ।<br />
-		दरोदितश्मश्रुकृतश्रियस्तदा<br />
-		तदाननेन्दोरुपमानतां व्रजेत् ॥ ५ ॥
-	</p>
-	<p class="enpoem">
-		If its black mark were to slide down<br />
-		from the centre to the edge,<br />
-		then the moon might come close<br />
-		to resembling his moon-like face<br />
-		made still more endearing<br />
-		by the beard just appearing.
-		<span class="ncol">5</span>
-	</p>
+<p class="devpoem">
+विहाय मध्यं यदि लक्ष्मरेखया<br />
+बहिः प्रसार्येत सुधांशुमण्डलम् ।<br />
+दरोदितश्मश्रुकृतश्रियस्तदा<br />
+तदाननेन्दोरुपमानतां व्रजेत् ॥ ५ ॥
+</p>
+<p class="enpoem">
+If its black mark were to slide down<br />
+from the centre to the edge,<br />
+then the moon might come close<br />
+to resembling his moon-like face<br />
+made still more endearing<br />
+by the beard just appearing.
+<span class="ncol">5</span>
+</p>
 </div>
 
 <div id="c3_p6" class="poem1">
-	<p class="devpoem">
-		अधारयद्गर्भितरक्तसन्ध्यकं<br />
-		नृपात्मजः केशकलापमायतम् ।<br />
-		दृढानुरागच्छुरितैर्मृगीदृशा-<br />
-		मनुप्रविष्टं हृदयैरिवान्तरा ॥ ६ ॥		
-	</p>
-	<p class="enpoem">
-		The Prince had a majestic mane of hair<br />
-		interlaced with <span class="it"><span class="gls"><a epub:type="noteref" href="glossary.xhtml#gls36">raktasandhyaka</a></span></span> flowers –<br /> 
-		as if entwined within it<br />
-		were the hearts of doe-eyed ladies,<br />
-		daubed with the passion he aroused.		
-		<span class="ncol">6</span>
-	</p>
+<p class="devpoem">
+अधारयद्गर्भितरक्तसन्ध्यकं<br />
+नृपात्मजः केशकलापमायतम् ।<br />
+दृढानुरागच्छुरितैर्मृगीदृशा-<br />
+मनुप्रविष्टं हृदयैरिवान्तरा ॥ ६ ॥
+</p>
+<p class="enpoem">
+The Prince had a majestic mane of hair<br />
+interlaced with *raktasandhyaka* flowers –<br /> 
+as if entwined within it<br />
+were the hearts of doe-eyed ladies,<br />
+daubed with the passion he aroused.
+<span class="ncol">6</span>
+</p>
 </div>
 
 <div id="c3_p7" class="poem1">
-	<p class="devpoem">
-		अथैनमासादितयौवनोदयं<br />
-		नरेन्द्रकन्याभिरयोजयन्नृपः ।<br />
-		घनागमः सम्भृतरत्नसम्पदं<br />
-		वरापगाभिर्निधिमम्भसामिव ॥ ७ ॥
-	</p>
-	<p class="enpoem">
-		At length<br />
-		the Sovereign wedded his son,<br />
-		blooming with the blush of youth,<br />
-		to royal maidens –<br />
-		just as the coming of the clouds weds the ocean,<br />
-		resplendent with a wealth of jewels and gems,<br />
-		to great rivers.
-		<span class="ncol">7</span>
-	</p>
+<p class="devpoem">
+अथैनमासादितयौवनोदयं<br />
+नरेन्द्रकन्याभिरयोजयन्नृपः ।<br />
+घनागमः सम्भृतरत्नसम्पदं<br />
+वरापगाभिर्निधिमम्भसामिव ॥ ७ ॥
+</p>
+<p class="enpoem">
+At length<br />
+the Sovereign wedded his son,<br />
+blooming with the blush of youth,<br />
+to royal maidens –<br />
+just as the coming of the clouds weds the ocean,<br />
+resplendent with a wealth of jewels and gems,<br />
+to great rivers.
+<span class="ncol">7</span>
+</p>
 </div>
 
 <div id="c3_p8" class="poem1">
-	<p class="devpoem">
-		अरातिवर्गोन्मथनेन विश्रुतं<br />
-		विधातुमत्यन्तविनीतमप्यमुम् ।<br />
-		कदाचिदर्थोल्लसितेन भूपतिः<br />
-		स वाङ्मयेनैवमुपादिशत् सुतम् ॥ ८ ॥
-	</p>
-	<p class="enpoem">
-		The King wished his son<br />
-		to win fame by worsting all his enemies,<br />
-		and to perfect his self-mastery.<br />
-		One day he counselled him thus<br />
-		with words rich in wisdom.
-		<span class="ncol">8</span>
-	</p>
+<p class="devpoem">
+अरातिवर्गोन्मथनेन विश्रुतं<br />
+विधातुमत्यन्तविनीतमप्यमुम् ।<br />
+कदाचिदर्थोल्लसितेन भूपतिः<br />
+स वाङ्मयेनैवमुपादिशत् सुतम् ॥ ८ ॥
+</p>
+<p class="enpoem">
+The King wished his son<br />
+to win fame by worsting all his enemies,<br />
+and to perfect his self-mastery.<br />
+One day he counselled him thus<br />
+with words rich in wisdom.
+<span class="ncol">8</span>
+</p>
 </div>
 
 <div id="c3_p9" class="poem1">
-	<p class="devpoem">
-		धियः प्रकाशादुपदेशसम्भृतात्<br />
-		तमो हि तारुण्यविजृम्भितं जनाः ।<br />
-		समुज्झितुं तात भवन्ति पारिता-<br />
-		स्तदेतदाकर्णयितुं त्वमर्हसि ॥ ९ ॥
-	</p>
-	<p class="enpoem">
-		‘My son,<br />
-		it is by the light of knowledge<br />
-		fuelled by friendly advice<br />
-		that people have the power to dissipate<br />
-		that blinding darkness of budding youth.<br />
-		You would do well to heed<br />
-		these words of mine.
-		<span class="ncol">9</span>
-	</p>
+<p class="devpoem">
+धियः प्रकाशादुपदेशसम्भृतात्<br />
+तमो हि तारुण्यविजृम्भितं जनाः ।<br />
+समुज्झितुं तात भवन्ति पारिता-<br />
+स्तदेतदाकर्णयितुं त्वमर्हसि ॥ ९ ॥
+</p>
+<p class="enpoem">
+‘My son,<br />
+it is by the light of knowledge<br />
+fuelled by friendly advice<br />
+that people have the power to dissipate<br />
+that blinding darkness of budding youth.<br />
+You would do well to heed<br />
+these words of mine.
+<span class="ncol">9</span>
+</p>
 </div>
 
 <div id="c3_p10" class="poem1">
-	<p class="devpoem">
-		मुहुःप्रसर्पन्मदमीलितेक्षणाः<br />
-		क्षणाधिरोहद्रजसो मलीमसाः ।<br />
-		गजा इव स्तम्भनिरुद्धचेतसः<br />
-		खला न गृह्णन्ति नियन्तृचोदितम् ॥ १० ॥
-	</p>
-	<p class="enpoem">
-		‘The dissolute are like rutting elephants.<br />
-		Both are blind,<br />
-		one with a pompous pride,<br />
-		the other with streams of rut that form a river.<br />
-		Forever in thrall to <span class="it">rajas</span><span class="ref"><sup><a epub:type="noteref" href="#c3_en2">2</a></sup></span>,<br />
-		the men are as depraved<br />
-		as the mud-splattered beasts are filthy.<br />
-		A mind deadened by overindulgence<br />
-		frustrates the libertine;<br />
-		a taming post the elephant.<br />
-		Neither gives ear to their master.
-		<span class="ncol">10</span>
-	</p>
+<p class="devpoem">
+मुहुःप्रसर्पन्मदमीलितेक्षणाः<br />
+क्षणाधिरोहद्रजसो मलीमसाः ।<br />
+गजा इव स्तम्भनिरुद्धचेतसः<br />
+खला न गृह्णन्ति नियन्तृचोदितम् ॥ १० ॥
+</p>
+<p class="enpoem">
+‘The dissolute are like rutting elephants.<br />
+Both are blind,<br />
+one with a pompous pride,<br />
+the other with streams of rut that form a river.<br />
+Forever in thrall to *rajas*<span class="ref"><sup><a epub:type="noteref" href="#c3_en2">2</a></sup></span>,<br />
+the men are as depraved<br />
+as the mud-splattered beasts are filthy.<br />
+A mind deadened by overindulgence<br />
+frustrates the libertine;<br />
+a taming post the elephant.<br />
+Neither gives ear to their master.
+<span class="ncol">10</span>
+</p>
 </div>
 
 <div id="c3_p11" class="poem1">
-	<p class="devpoem">
-		सहस्रशस्तुङ्गतुरङ्गवीचयो<br />
-		मदद्विपद्वीपविशेषितान्तराः ।<br />
-		भवन्तमुग्रायुधनक्रराजयो<br />
-		भजन्ति नित्यं बहला बलाब्धयः ॥ ११ ॥
-	</p>
-	<p>
-		<audio controls="controls">
-		  <source src="audio/3_11.m4a" type="audio/mpeg" />
-		  Your browser does not support the audio tag.
-		</audio> 
-	</p>	
-	<p class="enpoem">
-		‘Battalions vast as bottomless oceans –<br /> 
-		high-stepping horses as white-cresting waves,<br />
-		rutting elephants as abutting islands towering high,<br />
-		rows of savage weapons for floats of predatory crocodiles –<br />
-		stand in bands of thousands<br />
-		ever at the ready for you.
-		<span class="ncol">11</span>
-	</p>
+<p class="devpoem">
+सहस्रशस्तुङ्गतुरङ्गवीचयो<br />
+मदद्विपद्वीपविशेषितान्तराः ।<br />
+भवन्तमुग्रायुधनक्रराजयो<br />
+भजन्ति नित्यं बहला बलाब्धयः ॥ ११ ॥
+</p>
+<p>
+<audio controls="controls">
+  <source src="audio/3_11.m4a" type="audio/mpeg" />
+  Your browser does not support the audio tag.
+</audio> 
+</p>
+<p class="enpoem">
+‘Battalions vast as bottomless oceans –<br /> 
+high-stepping horses as white-cresting waves,<br />
+rutting elephants as abutting islands towering high,<br />
+rows of savage weapons for floats of predatory crocodiles –<br />
+stand in bands of thousands<br />
+ever at the ready for you.
+<span class="ncol">11</span>
+</p>
 </div>
 
 <div id="c3_p12" class="poem1">
-	<p class="devpoem">
-		उपेत्य तुण्डीरमखण्डितोद्यमः<br />
-		प्रमथ्य चम्पप्रमुखान् रणोन्मुखान् ।<br />
-		प्रशाधि काञ्चीमनुवर्तितप्रजः<br />
-		पतिर्निधीनामलकापुरीमिव ॥ १२ ॥
-	</p>
-	<p class="enpoem">
-		‘Approach the <span class="gls"><a epub:type="noteref" href="glossary.xhtml#gls48">Tuṇḍīra</a></span> land<br />
-		and finish for once and for all those warriors headed by <span class="gls"><a epub:type="noteref" href="glossary.xhtml#gls8">Campa</a></span><br />
-		hurling themselves headfirst into battle.<br />
-		Rule <span class="gls"><a epub:type="noteref" href="glossary.xhtml#gls21">Kāñcī</a></span> wisely and win the love of her inhabitants –<br />
-		just as Kubera, lord of wealth, rules Alakā.
-		<span class="ncol">12</span>
-	</p>
+<p class="devpoem">
+उपेत्य तुण्डीरमखण्डितोद्यमः<br />
+प्रमथ्य चम्पप्रमुखान् रणोन्मुखान् ।<br />
+प्रशाधि काञ्चीमनुवर्तितप्रजः<br />
+पतिर्निधीनामलकापुरीमिव ॥ १२ ॥
+</p>
+<p class="enpoem">
+‘Approach the Tuṇḍīra land<br />
+and finish for once and for all those warriors headed by Campa<br />
+hurling themselves headfirst into battle.<br />
+Rule Kāñcī wisely and win the love of her inhabitants –<br />
+just as Kubera, lord of wealth, rules Alakā.
+<span class="ncol">12</span>
+</p>
 </div>
 
 <div id="c3_p13" class="poem1">
-	<p class="devpoem">
-		अथाभिभूताखिलवन्यभूभृत-<br />
-		स्तुरुष्कभङ्गस्तव नैव दुष्करः ।<br />
-		निगीर्णशाखाशतसंवृतिः कथं<br />
-		तरुप्रकाण्डं न दहेद्दवानलः ॥ १३ ॥
-	</p>
-	<p class="enpoem">
-		‘After laying waste every one of the woodland chieftains,<br />
-		you’ll crush the <span class="gls"><a epub:type="noteref" href="glossary.xhtml#gls43">Sultan</a></span> with ease.<br />
-		Once a fierce fire has devoured<br />
-		the countless small branches providing cover,<br />
-		how can it fail to burn down the tree itself?’
-		<span class="ncol">13</span>
-	</p>
+<p class="devpoem">
+अथाभिभूताखिलवन्यभूभृत-<br />
+स्तुरुष्कभङ्गस्तव नैव दुष्करः ।<br />
+निगीर्णशाखाशतसंवृतिः कथं<br />
+तरुप्रकाण्डं न दहेद्दवानलः ॥ १३ ॥
+</p>
+<p class="enpoem">
+‘After laying waste every one of the woodland chieftains,<br />
+you’ll crush the Sultan with ease.<br />
+Once a fierce fire has devoured<br />
+the countless small branches providing cover,<br />
+how can it fail to burn down the tree itself?’
+<span class="ncol">13</span>
+</p>
 </div>
 
 <div id="c3_p14" class="poem1">
-	<p class="devpoem">
-		इतीरयित्वा विरते नरेश्वरे<br />
-		प्रवृष्टपाथोधरसाम्यधारिणि ।<br />
-		कृतप्रणामः शिरसा प्रतीष्टवान्<br />
-		गुरूपदेशं गुणिनां पुरःसरः ॥ १४ ॥
-	</p>
-	<p class="enpoem">
-		As a cloud comes to a close after pouring forth its rain<br />
-		so did the King after delivering his speech.<br />
-		The Prince,<br />
-		foremost among the noble,<br />
-		prostrated before his father’s feet<br />
-		taking to heart his hallowed words.
-		<span class="ncol">14</span>
-	</p>
+<p class="devpoem">
+इतीरयित्वा विरते नरेश्वरे<br />
+प्रवृष्टपाथोधरसाम्यधारिणि ।<br />
+कृतप्रणामः शिरसा प्रतीष्टवान्<br />
+गुरूपदेशं गुणिनां पुरःसरः ॥ १४ ॥
+</p>
+<p class="enpoem">
+As a cloud comes to a close after pouring forth its rain<br />
+so did the King after delivering his speech.<br />
+The Prince,<br />
+foremost among the noble,<br />
+prostrated before his father’s feet<br />
+taking to heart his hallowed words.
+<span class="ncol">14</span>
+</p>
 </div>
 
 <div id="c3_p15" class="poem1">
-	<p class="devpoem">
-		अथोरगाणामधिपस्य भाविनं<br />
-		भुवो भरस्यापगमं दिनेश्वरः ।<br />
-		निवेदयिष्यन्निव गाढरंहसा<br />
-		रथेन पातालगुहामगाहत ॥ १५ ॥
-	</p>
-	<p class="enpoem">
-		Then the sun –<br />
-		wishing as it were<br />
-		to tell Śeṣa, lord of serpents,<br />
-		that the load of the globe would soon be lightened<span class="ref"><sup><a epub:type="noteref" href="#c3_en3">3</a></sup></span> –<br />
-		hurried in a flurry of flying chariot<br />
-		into the cavern of Pātāla.		
-		<span class="ncol">15</span>
-	</p>
+<p class="devpoem">
+अथोरगाणामधिपस्य भाविनं<br />
+भुवो भरस्यापगमं दिनेश्वरः ।<br />
+निवेदयिष्यन्निव गाढरंहसा<br />
+रथेन पातालगुहामगाहत ॥ १५ ॥
+</p>
+<p class="enpoem">
+Then the sun –<br />
+wishing as it were<br />
+to tell Śeṣa, lord of serpents,<br />
+that the load of the globe would soon be lightened<span class="ref"><sup><a epub:type="noteref" href="#c3_en3">3</a></sup></span> –<br />
+hurried in a flurry of flying chariot<br />
+into the cavern of Pātāla.
+<span class="ncol">15</span>
+</p>
 </div>
 
 <div id="c3_p16" class="poem1">
-	<p class="devpoem">
-		अथ नृपसुतः सान्ध्यं निर्माय कर्म सभां गतः<br />
-		क्षणमिव गुरोराज्ञां राज्ञां गणाय निवेद्य सः ।<br />
-		विमतविजयव्यग्रोत्साहान् विहाय गृहाय ता-<br />
-		नरमत सुखी शय्यागेहे सरोजमुखीसखः ॥ १६ ॥ हरिणी
-	</p>
-	<p>
-		<audio controls="controls">
-		  <source src="audio/3_16.m4a" type="audio/mpeg" />
-		  Your browser does not support the audio tag.
-		</audio> 
-	</p>	
-	<p class="enpoem">
-		At length, after the prayers of the near-drawing evening,<br />
-		the Prince entered the assembly hall.<br />
-		In an instant he told the gathered leaders to heed<br />
-		his father’s orders.<br />
-		Raring to raze their rivals, he bid them head to bed,<br />
-		while he in his sleeping quarters<br />
-		relaxed with his wives so dear, full of cheer.
-		<span class="ncol">16</span>
-	</p>
+<p class="devpoem">
+अथ नृपसुतः सान्ध्यं निर्माय कर्म सभां गतः<br />
+क्षणमिव गुरोराज्ञां राज्ञां गणाय निवेद्य सः ।<br />
+विमतविजयव्यग्रोत्साहान् विहाय गृहाय ता-<br />
+नरमत सुखी शय्यागेहे सरोजमुखीसखः ॥ १६ ॥ हरिणी
+</p>
+<p>
+<audio controls="controls">
+  <source src="audio/3_16.m4a" type="audio/mpeg" />
+  Your browser does not support the audio tag.
+</audio> 
+</p>
+<p class="enpoem">
+At length, after the prayers of the near-drawing evening,<br />
+the Prince entered the assembly hall.<br />
+In an instant he told the gathered leaders to heed<br />
+his father’s orders.<br />
+Raring to raze their rivals, he bid them head to bed,<br />
+while he in his sleeping quarters<br />
+relaxed with his wives so dear, full of cheer.
+<span class="ncol">16</span>
+</p>
 </div>
 
-	[^1]: Kāma’s banner is emblazoned with a fish.  
-			Lines upon the soles of the feet in the form of a fish are 
-			one of the signs of a <span class="it">cakravartī</span>, a supreme emperor.
-		
-	<aside epub:type="footnote" id="c3_en2">
-		<p><span class="it">Rajas</span> is physical dirt as well as being the <span class="it">guṇa</span> or quality characterised by excessive passion.</p>
-	</aside>
-	<aside epub:type="footnote" id="c3_en3">
-		<p>by the destruction of the oppressive Sultan</p>
-	</aside>
+[^1]: Kāma’s banner is emblazoned with a fish.  
+Lines upon the soles of the feet in the form of a fish are 
+one of the signs of a *cakravartī*, a supreme emperor.
+
+[^2]: *Rajas* is physical dirt as well as being the *guṇa* or quality characterised by excessive passion.
+[^3]: by the destruction of the oppressive Sultan
 </div>
 </body>
 </html>
